# cmdstan

./: .gitignore  CMakeLists.txt  build.py  makefile  so-build.sh  stanc.cmake.inc
examples/: CMakeLists.txt
examples/bernoulli/: CMakeLists.txt  README  bernoulli.hpp  lddebug  lddebug-nodeepbind  lddebug-visible
examples/bernoulli-shared/: README  lddebug
make/: program
src/: CMakeLists.txt
src/cmdstan/: CMakeLists.txt  command.hpp  dynamic_model.hpp
src/cmdstan/arguments/: arg_model.hpp
